feat: introduce gallery and headliners
